--- a/greeting.html
+++ b/greeting.html
@@ -6,7 +6,20 @@
 </head>
 
 <body>
-    <p>Hello world!</p>
+    <p>Hello </p>
+    <div id="app"> I like Movies</div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.1.0/umd/react.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.1.0/umd/react-dom.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+    <script type="text/babel">
+        class Movies extends React.Component { render() { return (
+        <div>
+            <h1>Star Wars</h1>
+
+        </div>
+        ); } } ReactDOM.render(
+        <Movies/>, document.getElementById('app') );
+    </script>
 </body>
 
 </html>
