--- a/greeting.html
+++ b/greeting.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>My First React App</title>
-</head>
+    <head>
+        <title>My First React App</title>
+    </head>
 
-<body>
-    <p>Hello </p>
-    <div id="app"> I like Movies</div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.1.0/umd/react.development.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.1.0/umd/react-dom.development.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-    <script type="text/babel">
-        class Movies extends React.Component { render() { return (
-        <div>
-            <h1>Star Wars</h1>
+    <body>
+        <p>Hello </p>
+        <div id="app"> I like Movies</div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.1.0/umd/react.development.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.1.0/umd/react-dom.development.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+        <script type="text/babel">
+            class Movies extends React.Component {
+                render() {
+                return (
+                        <div>
+                            <h1> This is {this.props.name}</h1>       
+                            <h1>Star Wars</h1>
 
-        </div>
-        ); } } ReactDOM.render(
-        <Movies/>, document.getElementById('app') );
-    </script>
-</body>
+                        </div>
+                    );
+                } 
+            } 
+            ReactDOM.render(
+            <Movies/>, document.getElementById('app')
+            );
+        </script>
+    </body>
 
 </html>
