add events for counter chkp5

--- a/counter.html
+++ b/counter.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Welcome to Bloc</title>
+   <title>Welcome to Bloc</title>
 </head>
 
 <body>
@@ -19,9 +19,20 @@
             constructor(props){
             super(props);
             this.state = {
-                number: 1
+              number: 1
             }
-            }
+          }
+
+          increment(event) { 
+            this.setState({
+             number: this.state.number + 1 
+            }) 
+          }
+          decrement(event) {
+           this.setState({
+             number: Math.max(1, this.state.number - 1) 
+            })
+          }
 
 
         render() {
@@ -30,6 +41,8 @@
               <img src={this.props.image} alt="Bloc Logo"/>
               <h2>Current program: {this.props.label}</h2>
               <h3>Current week: {this.state.number}</h3>
+              <button onClick={this.increment.bind(this)}>Increment</button>
+              <button onClick={this.decrement.bind(this)}>Decrement</button>
               <p>Current Date: {this.props.date.toLocaleDateString()}</p>
             </div>
           );
@@ -52,6 +65,6 @@
       );
 
     </script>
-</body>
+  </body>
 
 </html>
